chore: Fix groupId