@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>ir.sudoit</groupId>
+    <groupId>io.github.sudoitir</groupId>
     <artifactId>claudecode4j-parent</artifactId>
     <version>${revision}</version>
   </parent>
@@ -14,7 +14,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>ir.sudoit</groupId>
+      <groupId>io.github.sudoitir</groupId>
       <artifactId>claudecode4j-api</artifactId>
     </dependency>
     <dependency>
@@ -50,17 +50,4 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>25</source>
-          <target>25</target>
-          <compilerArgs>--enable-preview</compilerArgs>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
